package com.example.terminal.Model;

public abstract class AbstractFormat {
    public abstract void execute(Format format);
}

