package com.example.terminal.Model;

import java.util.Date;

public class Format {

    public String format;
    public Date date;

    public String getFormat() {
        return format;
    }
    public void setFormat(String format) {
        this.format = format;
    }
    public Date getDate() {
        return date;
    }
    public void setDate(Date date) {
        this.date = date;
    }
}



